#380.Verbeterde-contrastverhouding-formulier-elementen : disabled border-color fix

--- a/src/styles/mixins/_dso-variables.scss
+++ b/src/styles/mixins/_dso-variables.scss
@@ -94,7 +94,7 @@ $dso-button-default-active-color: $bosgroen;
 $dso-button-default-disabled-color: $grasgroen-40;
 
 $dso-input-disabled-color: $grijs-40;
-$dso-input-disabled-border-color: #e8e8e8;
+$dso-input-disabled-border-color: $grijs-10;
 
 $dso-full-width-color: $grasgroen-10;
 
